--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
   - "2.7"
   - "3.0"
 install:
+ - pip install PyYAML
  - pip install pylint==1.3.1
  - pip install pyflakes
  - pip install pep8
