--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
  - pip install pylint==1.3.1
  - pip install pyflakes
  - pip install pep8
+ - pip install nose
 script:
   - pep8 setup.py pytravis
   - pylint setup.py pytravis
