--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ python:
 #  - "3.4"
 install:
  - pip install PyYAML
- - pip install pylint==1.3.1
+ - pip install pylint
  - pip install pyflakes
  - pip install pep8
  - pip install nose
 script:
   - pep8 setup.py pytravis
-  - pylint setup.py pytravis
+  - python --version 2>&1 | grep 2\.6\.. || pylint setup.py pytravis
   - pyflakes setup.py pytravis
   - nosetests pytravis
